made use of separators consistent in the toolbar

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -92,12 +92,13 @@
       <a data-tab="sitesettings">Settings</a>
       <a class="hn_advanced" data-tab="sitedataupload">Data Upload</a>
       <a data-tab="sitetour">Tour</a>
-        </div>
-        </div>
+      </div>
+      </div>
+      <a class="separator"></a>
       <div class="expand fonts" id="fontsizewrap">
-	<span id="fontsize">$txt:{Size}$</span>
-	<div id="fontsizelist" class="expandinner">
-	  <h1><a data-command="heading" data-param="<h1>"
+        <span id="fontsize">$txt:{Size}$</span>
+      <div id="fontsizelist" class="expandinner">
+        <h1><a data-command="heading" data-param="<h1>"
 		data-style="font-size" data-value="220%">Bigger</a></h1>
 	  <h2><a data-command="heading" data-param="<h2>"
 		data-style="font-size" data-value="180%">Big</a></h2>
