fixed up groups tab input box

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -536,6 +536,10 @@ label {
    padding: 5px 0px 0px 0px;
 }
 
+#newgroup {
+            width: 180px
+            }
+
 #showadvperms, #showbasicgroups, #showadvusers {
    font-size:   80%;
    color:       darkorange;
