--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -278,7 +278,7 @@
               </div>
               <div id="advperms">
               <p>Give your new group a name, set some views for it and apply it to this page. You can then add users to the group.</p>
-              <input id="newgroup" type="input" width="auto" />
+              <input id="newgroup" type="input" />
             <div id="advpermstable"></div>
             <input id="addnewgroupbutton" type="submit" class="button" value="Create Group" />
             <p id="newgroupfeedback">&nbsp;</p>
