can now reset row heights and column widths

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -440,6 +440,8 @@
       <ul>
 	<li><a name="deletecols">$txt:{Delete Column(s)}$</a></li>
 	<li class="seperator"></li>
+	<li><a name="defaultwidthcols">$txt:{Default Width}$</a></li>
+	<li class="seperator"></li>
 	<li><a name="insertcolsbefore">$txt:{Insert Before}$</a></li>
 	<li><a name="insertcolsafter">$txt:{Insert After}$</a></li>
       </ul>
@@ -448,6 +450,8 @@
     <div id="axiscontextmenurow">
       <ul>
 	<li><a name="deleterows">$txt:{Delete Row(s)}$</a></li>
+	<li class="seperator"></li>
+	<li><a name="defaultheightrows">$txt:{Default Height}$</a></li>
 	<li class="seperator"></li>
 	<li><a name="insertrowsbefore">$txt:{Insert Before}$</a></li>
 	<li><a name="insertrowsafter">$txt:{Insert After}$</a></li>
