--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -254,6 +254,7 @@
 
       <a class="separator"></a>
       <a title="Make Wiki Input" class="toolbar-item" id="inlineinput"></a>
+      <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
       <div id="typepanel">
           <div id="expandviews" class="expand">
           <span><em>Views</em></span>
@@ -429,8 +430,6 @@
 	<li class="seperator"></li>
 	<li><a name="deleteleft">Delete (shift left)</a></li>
 	<li><a name="deleteup">Delete (shift up)</a></li>
-	<li class="seperator"></li>
-	<li><a name="makewikiselect" class="makewikiselect">Make wiki selectbox</a></li>
 	<li class="seperator viewlogs"></li>
 	<li><a name="viewlogs" class="viewlogs">View cell's history</a></li>
       </ul>
