--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -562,11 +562,11 @@ label {
              }
 
 .inline {
-   -moz-border-radius: 4px 4px 4px 4px;
-   -webkit-border-radius: 4px 4px 4px 4px;
-   margin: 1px;
+   -moz-border-radius: 2px 2px 2px 2px;
+   -webkit-border-radius: 2px 2px 2px 2px;
+   /*margin: 1px;*/
    border: 1px solid #ddd;
-   padding: 0px 1px 0px 1px;
+   /*padding: 0px 1px 0px 1px;*/
 }
 
 #clinput div {
