light polish for layout of debugz

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -675,7 +675,7 @@ label {
               padding: 4px;
               overflow: auto;
               height: 202px;
-              color: #888;
+              color: #666;
               }
 
 .hn_debug_z div, .hn_debug_z table tr td {
@@ -693,9 +693,9 @@ label {
                }
 
 .hn_debug_top {
-                font-size : 120%;
-                font-weight: bold;
-                color: #999;
+                font-size : 14pt;
+                color: #444;
+                text-decoration: underline;
                }
 
 .hn_inlineselect {
