--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -632,9 +632,9 @@
       <div>Show Advanced Features
         <input id='hn_showadvanced' type='checkbox' value='show_advanced' />
       </div>
-      <!-- <div>Show Developer Features
-        <input id='hn_showdeveloper' type='checkbox' value='show_developer' />
-       </div> -->
+      <!-- <div>Show Developer Features -->
+      <!--  <input id='hn_showdeveloper' type='checkbox' value='show_developer' /> -->
+        <!-- </div> -->
     </div>
   </div>
   <div id="sitedataupload" class="sitedialogwrapper">
@@ -719,7 +719,7 @@
      </div>
     </div>
   <div id="sitemanageapi">
-    Yeah!
+    Fix me up!
   </div>
   <div id="sitetour">
 	<div id="tourwrapper">
