css fix for underlines in page box

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -715,3 +715,5 @@ label {
                    height: 20px;
                    font-size: 95%;
                    }
+
+#ctrlpanel a:link, #ctrlpanel a:visited { border-bottom: none }
