tweaks to bullets inside tabs

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
@@ -256,6 +256,11 @@ div.hn_sld_tabs div ul
   border: none;
   }
 
+div.hn_sld_tabs div li
+{
+  float: none;
+  }
+
 // Generic boxes
 .hn_box_height_1 {height: 16px; }
 .hn_box_height_2 {height: 38px; }
