--- a/lib/hypernumbers-1.0/priv/core_install/docroot/frontpage/fp.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/frontpage/fp.css
@@ -14,7 +14,7 @@
 #hn_msg {
           width: 420px;
           height: 400px;
-          background: url(/drawing.png) no-repeat;
+          background: url(/frontpage/drawing.png) no-repeat;
           padding: 60px 10px 0px 120px;
           font-family: 'Amaranth', sans-serif;
           font-size : 32px;
