padding adjustments to sparkbars and sparkhists

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -717,3 +717,7 @@ label {
                    }
 
 #ctrlpanel a:link, #ctrlpanel a:visited { border-bottom: none }
+
+.hn_spark {
+            padding: 2px 0px 0px 0px
+            }
