--- a/lib/hypernumbers-1.0/priv/core_install/docroot/frontpage/fp.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/frontpage/fp.css
@@ -23,6 +23,10 @@
           text-align: center;
 }
 
+#hn_text:hover {
+                 cursor: pointer;
+                 }
+
 #hn_msg p {
            margin: 0px 0px 10px 0px;
            }
