--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -662,7 +662,7 @@
         <span id="hn_map_temp" class="floatright"></span>
       </div>
       <div>
-        <span>Do what if the page exits?</span>
+        <span>Do what if the page exists?</span>
         <select id="hn_map_overwrite">
           <option>dont_overwrite</option>
           <option>overwrite</option>
