first commit of user-defined fns

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -465,19 +465,21 @@
     <div id="hn_makeuserdeffns" class="dialog">
       <h2>$txt:{User Defined Functions}$</h2>
       <a id="hn_makeuserdeffnsclose">x</a>
-      <p id="hn_makeuserdeffnsblurb">Use this dialog box to define user defined functions. (It will probably be easier if you use on a page you have created from the <em>User Defined Functions</em> page template.</p>
-      <div class="hn_uf_txt">Function Name</div>
-      <input type="text" class="hn_uf_inp" id="hn_uf_fnname" />
-      <div class="hn_uf_txt">Function Description</div>
-      <input type="text" class="hn_uf_inp" id="hn_uf_fndesc" />
-      <div id="hn_uf_params">
-        <div class="hn_uf_txt">Parameter:</div>
-        <input type="text" class="hn_uf_inp" id="hn_uf_fnpname" />
+      <div>
+        <p id="hn_makeuserdeffnsblurb">Use this dialog box to define user defined functions. (It will probably be easier if you use on a page you have created from the <em>User Defined Functions</em> page template.</p>
+        <div class="hn_uf_txt">Function Name</div>
+        <input type="text" class="hn_uf_inp" id="hn_uf_fnname" />
+        <div class="hn_uf_txt">Function Description</div>
         <input type="text" class="hn_uf_inp" id="hn_uf_fndesc" />
-        <input type="text" class="hn_uf_inp" id="hn_uf_fncell" />
+        <div id="hn_uf_params">
+          <div class="hn_uf_txt">Parameter:</div>
+          <input type="text" class="hn_uf_inp" id="hn_uf_fnpname" />
+          <input type="text" class="hn_uf_inp" id="hn_uf_fndesc" />
+          <input type="text" class="hn_uf_inp" id="hn_uf_fncell" />
+        </div>
+        <div class="hn_uf_txt">Return Value:</div>
+        <input type="text" class="hn_uf_inp" id="hn_uf_retcell" />
       </div>
-      <div class="hn_uf_txt">Return Value:</div>
-      <input type="text" class="hn_uf_inp" id="hn_uf_retcell" />
     </div>
     <div id="hn_makewikiselect" class="mdialog">
         <h2>$txt:{Wiki Select Box}$</h2>
