Some tables fixes
* make ztable now work on formatted values not rawvalues
* added a new option that turns off the links in ztable
* add scrollbars if tables or ztables overflow

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -19,7 +19,6 @@ table {
     height : 100%;
 }
 
-
 h1 { font-size: 220%; }
 h2 { font-size: 180%; }
 h3 { font-size: 160%; }
@@ -321,6 +320,12 @@ label {
 #forgotten_pwd {
     margin-left: 5px;
 }
+
+.hn_overflow {
+               min-height: 100%;
+               overflow: auto;
+               clear: both;
+ }
 
 .inlineform {
     background: url(/hypernumbers/sprite.png) -64px -1px;
